# BewaiseAI

./: Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: alembic.ini  main.py
app/api/: v1.py
app/core/: config.py  dals.py  models.py  schema.py  services.py
app/migration/: env.py
app/migration/versions/: cb34a9e53b12_init.py
app/static/: index.html
app/static/css/: style.css
app/static/script/: script.js
app/utils/: cache.py
tests/: conftest.py  docker-compose.yml  test_dals.py  test_models.py  test_services.py
